// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c10 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Reset User Authentication?
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
          kind="danger"
        >
          some server error
        </div>
        <div
          class="c11"
        >
          You are about to reset authentication for user
          <span
            class="c12"
          >
             smith 
          </span>
          . This will generate a temporary URL which can be used to set up new authentication.
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c13"
          fill="filled"
        >
          Generate reset url
        </button>
        <button
          class="c14"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`processing state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c12:focus-visible,
.teleport-button__force-focus-visible .c12 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c12:hover,
.teleport-button__force-hover .c12 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c12:active,
.teleport-button__force-active .c12 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c12:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Reset User Authentication?
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          You are about to reset authentication for user
          <span
            class="c11"
          >
             smith 
          </span>
          . This will generate a temporary URL which can be used to set up new authentication.
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c12"
          disabled=""
          fill="filled"
        >
          Generate reset url
        </button>
        <button
          class="c13"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`success state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  color: #FFFFFF;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c13 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Share Link
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          User
          <span
            class="c11"
          >
             Lester 
          </span>
          has been reset. Share this URL with the user to set up a new password, link is valid for 
          30 minutes
          .
        </div>
        <div
          class="c12 c13"
          color="light"
        >
          <div
            class="c14 c8"
            style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
          >
            <div>
              http://localhost/web/reset/0c536179038b386728dfee6602ca297f
            </div>
          </div>
          <button
            class="c15"
            fill="filled"
            style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
          >
            Copy
          </button>
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c16"
          fill="filled"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
